--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 services:
  torrentflux:
-  image: nmanceau/torrentflux
+  image: nmanceau/torrentflux-ng
   depends_on:
    - torrentflux_db
   volumes:
@@ -11,6 +11,8 @@ services:
    DB_NAME: torrentflux
    DB_USER: root
    DB_PASS: root
+  ports:
+  - 80:80
 
  torrentflux_db:
   image: mariadb:10.3
