--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,13 @@ services:
   volumes:
    - torrentflux_data:/var/www/html/downloads
   environment:
-   DB_HOST: torrentflux_db
-   DB_NAME: torrentflux
-   DB_USER: root
-   DB_PASS: root
+   - DB_HOST=torrentflux_db
+   - DB_NAME=torrentflux
+   - DB_USER=root
+   - DB_PASS=root
+   - APACHE_RUN_USER=#1000
   ports:
-  - 80:80
+  - 8080:80
 
  torrentflux_db:
   image: mariadb:10.3
@@ -20,8 +21,8 @@ services:
   volumes:
   - torrentflux_db:/var/lib/mysql
   environment:
-   MYSQL_ROOT_PASSWORD: root
-   MYSQL_DATABASE: torrentflux
+   - MYSQL_ROOT_PASSWORD=root
+   - MYSQL_DATABASE=torrentflux
 
 volumes:
   torrentflux_db:
